--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
   <version>0.0.1-SNAPSHOT</version>
   
    <properties>
-  	<maven.compiler.target>12</maven.compiler.target>
-  	<maven.compiler.source>12</maven.compiler.source>
-        <exec.mainClass>dad.javafx.gson.Main</exec.mainClass>
+  	<maven.compiler.target>11</maven.compiler.target>
+  	<maven.compiler.source>11</maven.compiler.source>
+     <exec.mainClass>dad.maven.gson.Main</exec.mainClass>
   </properties>
   
   <dependencies>
